fix: Use box/text-shadow to avoid flicker

--- a/src/scss/4-components/_tooltip.scss
+++ b/src/scss/4-components/_tooltip.scss
@@ -18,10 +18,11 @@
 
     background-color: color(grey-200);
 
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+
     visibility: hidden;
 
     opacity: 0;
-    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.4));
 
     transition: opacity 0.3s ease-in-out;
 
@@ -33,6 +34,7 @@
 
       color: color(grey-200);
       font-size: 12px;
+      text-shadow: var(--tt-caret-shadow) 1px 1px rgba(0, 0, 0, 0.35);
 
       transform: rotate(var(--tt-caret-rotate)) scaleX(1.3);
     }
